@@ -1,3 +1,4 @@
 Next release:
 
+0004260: Factor tarball operations and possibly others to fabric-common so others can use them.
 0004258: Create Fabric project in Subversion
